[project]
name = "ame-json"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.12.3"]

[project.urls]
Repository = "https://github.com/nasrak62/ame-json"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pytest>=8.4.2", "pytest-asyncio>=1.3.0"]
